<?xml version="1.0"?>
<package format="2">
  <name>ue4_ros_drivers</name>
  <version>0.0.0</version>
  <description>The ue4_ros_drivers package</description>

  <maintainer email="lhc@todo.todo">lhc</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend> -->
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>mavros_msgs</depend>


  <export>
    <nodelet plugin="${prefix}/nodelet_plugin.xml"/>
  </export>
</package>
