<?xml version="1.0"?>
<package format="2">
  <name>ue4_ros_drivers</name>
  <version>0.0.0</version>
  <description>The ue4_ros_drivers package</description>

  <maintainer email="lhc@todo.todo">lhc</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>tf2</depend>
  <depend>tf</depend>
  <depend>rosgraph_msgs</depend>


  <export>
    <nodelet plugin="${prefix}/nodelet_plugin.xml"/>
  </export>
</package>
